--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -35,18 +35,17 @@
                     <h5></h5>
                   </div>
                   <div class="ibox-content">
-                    <div class="table-responsive">
-                      <table class="table table-striped" id="content">
-                        <thead>
-                          <tr>
-                            <th>Notificación</th>
-                            <th>Email</th>
-                            <th>Descripción</th>
-                            <th>Fecha</th>
-                          </tr>
-                        </thead>
-                      </table>
+                    <div class="table-responsive" id="content">
                     </div>
+                    <ul class = "pagination">
+                      <li><a href = "#">&laquo;</a></li>
+                      <li class = "active"><a href = "#">1</a></li>
+                      <li class = "disabled"><a href = "#">2</a></li>
+                      <li><a href = "#">3</a></li>
+                      <li><a href = "#">4</a></li>
+                      <li><a href = "#">5</a></li>
+                      <li><a href = "#">&raquo;</a></li>
+                    </ul>
                   </div>
                 </div>
               </div>
