--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -18,12 +18,12 @@
       <div id="page-wrapper" class="gray-bg">
         <div class="row border-bottom white-bg">
           <nav class="navbar navbar-static-top" role="navigation">
-          <div class="navbar-header">
-            <button aria-controls="navbar" aria-expanded="false" data-target="#navbar" data-toggle="collapse" class="navbar-toggle collapsed" type="button">
-              <i class="fa fa-reorder"></i>
-            </button>
-            <a href="#" class="navbar-brand">Notificaciones</a>
-          </div>
+            <div class="navbar-header">
+              <button aria-controls="navbar" aria-expanded="false" data-target="#navbar" data-toggle="collapse" class="navbar-toggle collapsed" type="button">
+                <i class="fa fa-reorder"></i>
+              </button>
+              <a href="#" class="navbar-brand"><img src="../assets/images/logo.png"></a>
+            </div>
           </nav>
         </div>
         <div class="wrapper wrapper-content">
@@ -32,20 +32,9 @@
               <div class="col-lg-12">
                 <div class="ibox float-e-margins">
                   <div class="ibox-title">
-                    <h5></h5>
+                    <h5>Notificaciones</h5>
                   </div>
-                  <div class="ibox-content">
-                    <div class="table-responsive" id="content">
-                    </div>
-                    <ul class = "pagination">
-                      <li><a href = "#">&laquo;</a></li>
-                      <li class = "active"><a href = "#">1</a></li>
-                      <li class = "disabled"><a href = "#">2</a></li>
-                      <li><a href = "#">3</a></li>
-                      <li><a href = "#">4</a></li>
-                      <li><a href = "#">5</a></li>
-                      <li><a href = "#">&raquo;</a></li>
-                    </ul>
+                  <div class="ibox-content" id="content">
                   </div>
                 </div>
               </div>
