update dashboard view, add route with options to safe auth

--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Notificaciones | Dashboard</title>
-    <link rel="stylesheet" href="../assets/font-awesome/css/font-awesome.css">
-    <link rel="stylesheet" href="../assets/css/style.min.css">
-    <script type="text/javascript" src="../assets/js/jquery-2.1.1.js"></script>
-    <script type="text/javascript" src="../assets/js/bootstrap.js"></script>
-    <script type="text/javascript" src="../assets/js/react.js"></script>
-    <script type="text/javascript" src="../assets/js/react-dom.js"></script>
-    <script type="text/javascript" async src="../assets/js/notification.js"></script>
+    <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" href="assets/css/style.min.css">
+    <script type="text/javascript" src="assets/js/jquery-2.1.1.js"></script>
+    <script type="text/javascript" src="assets/js/bootstrap.js"></script>
+    <script type="text/javascript" src="assets/js/react.js"></script>
+    <script type="text/javascript" src="assets/js/react-dom.js"></script>
+    <script type="text/javascript" async  src="assets/js/notification.js"></script>
   </head>
   <body class="top-navigation">
     <div id="wrapper">
@@ -22,7 +22,7 @@
               <button aria-controls="navbar" aria-expanded="false" data-target="#navbar" data-toggle="collapse" class="navbar-toggle collapsed" type="button">
                 <i class="fa fa-reorder"></i>
               </button>
-              <a href="#" class="navbar-brand"><img src="../assets/images/logo.png"></a>
+              <a href="#" class="navbar-brand"><img src="assets/images/logo.png"></a>
             </div>
           </nav>
         </div>
