add filter in header

--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -34,6 +34,8 @@
                   <div class="ibox-title">
                     <h5>Notificaciones</h5>
                   </div>
+                  <div id="filters">
+                  </div>
                   <div class="ibox-content" id="content">
                   </div>
                 </div>
